...
        icon={<GoogleIcon size={20} />}
      />

      <Text style={styles.linkText}>
        Don&apos;t have an account?{" "}
        <Link href="/signup" style={styles.link}>
          Signup
        </Link>
      </Text>
    </SafeAreaView>
  );
}

